clusters/beryjuio-home/plex/tautulli/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: tautulli
  namespace: plex
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: tautulli
  ports:
    - port: 8181
      name: http
      targetPort: 8181
