clusters/beryjuio-home/plex/tautulli/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tautulli
  namespace: plex
spec:
  ingressClassName: istio
  rules:
    - host: tautulli.${CLUSTER_NAME}.k8s.beryju.io
      http:
        paths:
          - backend:
              service:
                name: tautulli
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - tautulli.${CLUSTER_NAME}.k8s.beryju.io
      secretName: beryjuio-plex-tautulli
